# hass-bristol-water

./: LICENSE.md  README.md  hacs.json  pyproject.toml
custom_components/bristol_water/: __init__.py  api.py  config_flow.py  const.py  coordinator.py  entity.py  manifest.json  sensor.py  util.py
custom_components/bristol_water/translations/: en.json
