[build-system]
requires = ["hatchling>=1.18.0", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "hass-bristol-water"
dynamic = ["version"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.envs.default]
dependencies = [
    "black",
]

[tool.hatch.envs.default.scripts]
test = [
    "black --check --diff .",
]
lint = [
    "black ."
]

[tool.black]
target-version = ["py313"]
